feat(server): 계좌 정보 조회 API 구현